src/styles.css
/* ... */
.song-view-files .tags::-webkit-scrollbar, .song-view-comments .tags::-webkit-scrollbar {
  display: none;
}

.song-view-files {
  overflow-x: hidden;
}

.song-view-files .files {
  margin-top: 7px; /*No idea why this is 7...*/
  padding-left: 0;
}

.song-view-files .files-empty {
  margin-left: 8px;
  margin-top: 10px;
}


.song-view-main {
  color: #888;
  margin-left: 0px;
}

.comment-container {
  display: flex;
  align-items: center;
  position: sticky;
  bottom: 0;
  left: 0;
  margin-top: 5px;
  background-color: #222;
  width: 100%;
}

.comment-container .marker {
  color: #eee;
  margin-left: 13px;
}

.comment-container textarea {
  border: none;
  background-color: #222;
  color: #eee;
  flex: 1;
  margin-left: 5px;
  margin-right: 5px;
  resize: none;
}

.comment-container textarea:focus {
  outline: none;
}

.comment-container button {
  color: #eee;
}

.comment {
  margin-top: 5px;
  margin-left: 8px;
}

.comment pre {
  color: #eee;
  margin-top: 1px;
  margin-bottom: 0;
  padding: 0;
}

.song-view-main button {
  padding: 0px;
  margin-right: 10px;
}

.song-view-main .selected {
  text-decoration: underline;
  color: #eee;
}

/*song and album*/
.song, .album {
  display: flex;
  flex-direction: column;
  margin-bottom: 5px;
}

.song .main, .album .main {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  cursor: pointer;
  height: 20px;
  padding-top: 0;
}

.song .main .play-button, .album .main .play-button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 25px;
  min-width: 25px;
  stroke: #ccc;
  fill: #ccc;
}

.song .main .play-button:hover, .album .main .play-button:hover {
  stroke: #eee;
  fill: #eee;
}

.song .main .play-button:focus, .album .main .play-button:focus {
  stroke: #eee;
  fill: #eee;
}

.song .main p, .album .main p {
  display: flex;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

.song .main .artist, .album .main .artist {
  padding: 0px;
  padding-right: 5px;
}

.title-and-artist {
  display: flex;
  flex-direction: row;
  padding: 0;
  align-content: stretch;
  overflow: hidden;
}

.song .title-and-artist {
  margin-right: 10px;
}

.title {
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 20px;
}

.tag {
  display: flex;
  align-items: center;
  font-size: 10px;
  color: #888;
  margin-left: auto;
  margin-right: 5px;
  margin-top: 0px;
  margin-bottom: 0px;
  white-space: nowrap;
  padding-right: 0;
}

.tags .tag {
  margin: 0;
  padding: 0 5px;
}

.tags .tag:first-child {
  padding-left: 0;
}

.separator {
  margin-right: 5px;
}

.actions {
  display: flex;
  flex-direction: column;
}

.actions-inner {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  font-size: 10px;
  color: #888;
  margin-left: 20px;
  height: 20px;
}

.actions-inner button {
  padding: 0 5px;
  white-space: nowrap;
}

.actions-delete {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 10px;
  color: #C44;
  margin-left: 25px;
  height: 20px;
}

.pin-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: auto;
  margin-right: 5px;
}

.file td {
  color: #eee;
}

.file .play-button-cell {
  min-width: 25px;
  padding-right: 4px; /*Compensate for 2px border-spacing on both sides*/
}

.file .play-button {
  margin: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  stroke: #ccc;
  fill: #ccc;
}

.file .play-button:hover {
  stroke: #eee;
  fill: #eee;
}

.artist-card {
  margin-bottom: 10px;
}

.artist-card .artist-name {
  padding-left: 0;
  height: 20px;
}

.artist-card .artist-name:disabled {
  text-decoration: none;
  cursor: default;
}

.artist-card .name-and-follow {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.artist-card .name-and-follow .follow {
  border: 1px solid #bbb;
  border-radius: 4px;
  margin-left: 10px;
  text-decoration: none;
}

.artist-card .name-and-follow .follow:hover {
  background-color: #333;
}

.artist-card .name-and-follow .follow:focus {
  border: 1px solid #eee;
}

.artist-card .name-and-follow .following {
  background-color: #bbb;
  color: #222;
}

.artist-card .name-and-follow .following:hover {
  background-color: #ccc;
}

.artist .bio {
  color: #888;
  margin-bottom: 20px;
  font-size: 11px;
}

.artist-card .location-div {
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 20px;
}

.artist-card .location-div svg {
  margin-right: 5px;
}

.artist-card .location-div p {
  margin: 0px;
}

.comments {
  margin-top: 10px;
}

.comments p {
  color: #eee;
  margin: 0;
}

.delete {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 30px;
}

.delete p {
  text-align: center;
}

/*UploadView*/
.upload-album input {
  flex: 1;
  margin-left: 5px;
}

.upload-album .album-title-div, .upload-album .album-tags-div {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.upload-song {
  padding: 5px;
  margin-bottom: 10px;
}

.upload-song input {
  flex: 1;
  margin-left: 5px;
}

.upload-song .song-title-div, .upload-song .song-tags-div {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.upload-song button {
  padding: 0;
  margin-top: 10px;
  margin-right: 10px;
  font-size: 11px;
}

.upload-song .song-file-div {
  margin: 5px 0;
}

.upload-file {
  padding: 5px;
  margin: 10px 5px;
}

.upload-file input {
  flex: 1;
  margin-left: 5px;
}

.upload-file .file-name-div, .upload-file .file-id-div, .upload-file .file-tags-div, .upload-file .file-info-div {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.upload-description {
  display: flex;
  flex-direction: column;
  margin-top: 1px; /*because of weird label behaviour*/
}

.album-textarea {
  border: 2px groove #bbb;
  background-color: #222;
  color: #eee;
  margin: 0 2px;
  margin-top: 5px;
  margin-bottom: 10px;
  resize: vertical;
}
/* ... */

